fixed navbar too narrow problem

--- a/public/index.css
+++ b/public/index.css
@@ -30,6 +30,7 @@ body {
 	position: fixed;
 	z-index: 2;
 	top: 0;
+	width:100%;
 }
 /*div.main{
 	position:relative;
