--- a/public/partials/404/404.css
+++ b/public/partials/404/404.css
@@ -1,2 +1,9 @@
-canvas { padding: 30; margin: 0; }
-canvas { background: #eee; display: block; margin: 0 auto; }
+canvas { 
+	padding: 30; 
+	margin: 0; 
+}
+canvas { 
+	background: #eee; 
+	display: block; 
+	margin: 0 auto; 
+}
